<resources>
    <string name="app_name">CarDesk</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fuel">FuelActivity</string>
    <string name="title_activity_one_veiw">OneVeiw</string>
    <string name="title_activity_view_all">ViewAll</string>
    <string name="title_activity_view_one">ViewOne</string>
    <string name="title_activity_lamp">LampActivity</string>
    <string name="title_activity_ins">InsActivity</string>
    <string name="title_activity_oil">OilActivity</string>
    <string name="title_activity_tyre">TyreActivity</string>
    <string name="title_activity_other">OtherActivity</string>

    <string name="banner_ad_main">ca-app-pub-3789613095387394/9269698060</string>
    <string name="banner_ad_fuel">ca-app-pub-3789613095387394/1606830464</string>
    <string name="banner_ad_ins">ca-app-pub-3789613095387394/5757828461</string>
    <string name="banner_ad_lamp">ca-app-pub-3789613095387394/7234561666</string>
    <string name="banner_ad_oil">ca-app-pub-3789613095387394/8711294866</string>
    <string name="banner_ad_other">ca-app-pub-3789613095387394/2664761268</string>
    <string name="banner_ad_settings">ca-app-pub-3789613095387394/7094960863</string>
    <string name="banner_ad_all">ca-app-pub-3789613095387394/8571694066</string>
    <string name="banner_ad_one">ca-app-pub-3789613095387394/1048427266</string>
    <string name="banner_ad_sos">ca-app-pub-3789613095387394/7727731660</string>
    <string name="banner_ad_edit">ca-app-pub-3789613095387394/2878729660</string>
    <string name="banner_ad_exp">ca-app-pub-3789613095387394/2899285664</string>

    <!-- Clean -->
    <string name="clean_toolbar">Car Wash</string>

    <!-- Edit -->
    <string name="edit_toolbar">Edit</string>
    <string name="save">Save</string>

    <!-- ExpImp -->
    <string name="exp_imp_toolbar">Export and import</string>
    <string name="export">Export:</string>
    <string name="exp_imp_fuel">Fuel</string>
    <string name="exp_imp_service">Service</string>
    <string name="exp_imp_insurance">Insurance</string>
    <string name="exp_imp_cleaning">Cleaning</string>
    <string name="exp_imp_export">EXPORT</string>
    <string name="exp_imp_import">IMPORT</string>

    <!-- Fuel -->
    <string name="fuel_toolbar">Fuel</string>
    <string name="fuel_full_tank">Your tank was full up.</string>
    <string name="fuel_full_tank_text">Your tank is full</string>
    <string name="fuel_quantity">Quantity: </string>

    <!-- Ins -->
    <string name="ins_toolbar">Insurance</string>
    <string name="ins_validity">Validity: </string>

    <!-- Main -->
    <string name="main_txt">Your current millage</string>

    <!-- ServiceActivity.java-->
    <string name="service">Service:</string>
    <string name="service_toolbar">Service</string>
    <string name="oil_change">Oil change</string>
    <string name="tyre_change">Tyre change</string>
    <string name="blub_change">Bulb change</string>
    <string name="abs_change">Absorber change</string>
    <string name="brake_system">Brake system</string>
    <string name="other">Other</string>
    <string name="choose_service">Choose service</string>

    <!-- Settings-->
    <string name="auto_liquid_measure"> liter</string>
    <string name="auto_distance_measure">km</string>
    <string name="auto_currency"> euro</string>
    <string name="title_activity_exp_imp">ExpImpActivity</string>
    <string name="set_your">Set your app values. Current are: </string>
    <string name="automatic">Automatic</string>
    <string name="litre_currency">litre</string>
    <string name="gallon_currency">gallon</string>
    <string name="kilometer_currency">kilometer</string>
    <string name="mile_currency">mile</string>
    <string name="euros_currency">euros</string>
    <string name="levs_currency">levs</string>
    <string name="dollars_currency">dollars</string>
    <string name="settings_toolbar">Settings</string>
    <string name="settings_button">Apply</string>
    <string name="settings_text">Set your app values</string>

    <!-- SOSActivity-->
    <string name="sos_toolbar">Roadside assistance</string>
    <string name="sos_call">Call to roadside assistance in:</string>
    <string name="sos_europe">Europe</string>
    <string name="sos_north_america">North America</string>
    <string name="sos_south_america">South America</string>
    <string name="sos_australia">Australia</string>

    <!--StatisticActivity-->
    <string name="statistic_hint_cat">Category:</string>
    <string name="statistic_hint_time">Period:</string>
    <string name="statistic_all">All</string>
    <string name="statistic_fuel">Fuel</string>
    <string name="statistic_service">Service</string>
    <string name="statistic_travelled_distance">Travelled distance </string>
    <string name="statistic_insurance">Insurance </string>
    <string name="statistic_clean">Clean </string>
    <string name="statistic_today">Today </string>
    <string name="statistic_week">Last week </string>
    <string name="statistic_month">Last month </string>
    <string name="statistic_year">Last year </string>
    <string name="statistic_beginning">From beginning </string>
    <string name="statistic_toolbar">Statistics </string>
    <string name="statistic_not_full">Not enough full ups. </string>
    <string name="statistic_fuel_cons">Fuel consumption is </string>
    <string name="statistic_per_cat">s per 100 </string>
    <string name="statistic_avr_day">Average sum for day is </string>
    <string name="statistic_avr_month">Average sum for month is </string>
    <string name="statistic_you_paid"> you paid </string>
    <string name="statistic_you_travelled"> you travelled </string>
    <string name="statistic_not_enough_records">Not enough records.</string>
    <string name="statistic_toast">Choose category or period</string>
    <string name="statistic_refresh">Refresh</string>

    <!--ViewAll-->
    <string name="view_all_toolbar">History</string>
    <string name="view_all_err">Error: No data</string>
    <string name="view_all_what">What: </string>

    <!--ViewOne-->
    <string name="view_one_toolbar">Record</string>
    <string name="view_one_fuel">s fuel on </string>
    <string name="view_one_cost_you"> and this cost you </string>
    <string name="view_one_or"> or </string>
    <string name="view_one_per"> per </string>
    <string name="view_one_you_do"> You do this at </string>
    <string name="view_one_on"> on </string>
    <string name="view_one_made_ins">You made insurance at </string>
    <string name="view_one_valid"> and it is valid to </string>
    <string name="view_one_cost">. This cost you </string>
    <string name="view_one_clean">You clean your car at </string>
    <string name="view_one_deleted">Successful deleted</string>
    <string name="view_one_delete_button">Delete</string>
    <string name="view_one_edit_button">Edit</string>


    <!--common-->
    <string name="mileage_field">Odometer: </string>
    <string name="price_edit_text">Price: </string>
    <string name="note_edit_text">Note: </string>
    <string name="date_edit_text">Date: </string>
    <string name="add_data_button">Add data</string>
    <string name="date_button">Date</string>
    <string name="history_button">History</string>

</resources>
