<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/backgroundOrange"
        tools:context=".EditActivity"
        android:id="@+id/simeon">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/navigationBarOrange"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/edit_toolbar"
            ads:met_floatingLabel="highlight"
            ads:met_underlineColor="@color/accentOrange"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/price_edit_text"
            ads:met_floatingLabel="highlight"
            ads:met_underlineColor="@color/accentOrange"
            android:layout_below="@+id/edit1"
            android:inputType="numberDecimal"
            android:layout_alignEnd="@+id/edit1"
            android:layout_alignStart="@+id/edit1"
            android:layout_marginTop="5dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/date_edit_text"
            ads:met_floatingLabel="highlight"
            android:focusableInTouchMode="false"
            ads:met_underlineColor="@color/accentOrange"
            android:layout_below="@+id/price"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:inputType="numberDecimal"
            android:layout_alignEnd="@+id/edit1"
            android:layout_alignStart="@+id/edit1"
            android:layout_marginTop="5dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/mileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/mileage_field"
            ads:met_floatingLabel="highlight"
            ads:met_underlineColor="@color/accentOrange"
            android:layout_below="@+id/date"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_alignEnd="@+id/edit1"
            android:layout_alignStart="@+id/edit1"
            android:layout_marginTop="5dp"
            android:inputType="number" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/note_edit_text"
            ads:met_floatingLabel="highlight"
            ads:met_underlineColor="@color/accentOrange"
            android:layout_below="@+id/mileage"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:inputType="text"
            android:layout_alignEnd="@+id/edit1"
            android:layout_alignStart="@+id/edit1"
            android:layout_marginTop="5dp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_save"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            ads:fb_borderColor="@color/accentOrange"
            ads:fb_borderWidth="1dp"
            ads:fb_defaultColor="@color/navigationBarOrange"
            ads:fb_focusColor="@color/lightOrange"
            ads:fb_radius="30dp"
            ads:fb_text="@string/save"
            ads:fb_textColor="#000000"
            android:layout_marginTop="37dp"
            android:layout_below="@+id/note"
            android:layout_centerHorizontal="true" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_edit"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>
</ScrollView>