<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backgroundOrange"
    tools:context=".ExpInpActivity"
    android:id="@+id/simeon">

    <View
        android:id="@+id/statusBarBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/navigationBarOrange"
        android:layout_alignBottom="@id/statusBarBackground"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <com.github.lguipeng.library.animcheckbox.AnimCheckBox
        android:layout_gravity="center_horizontal"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/fuel"
        ads:stroke_width="4dp"
        ads:stroke_color="@color/accentOrange"
        ads:circle_color="@color/lightOrange"
        android:layout_marginLeft="80dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.github.lguipeng.library.animcheckbox.AnimCheckBox
        android:layout_gravity="center_horizontal"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/service"
        ads:stroke_width="4dp"
        ads:stroke_color="@color/accentOrange"
        ads:circle_color="@color/lightOrange"
        android:layout_below="@+id/fuel"
        android:layout_alignLeft="@+id/clean"
        android:layout_alignStart="@+id/clean" />

    <com.github.lguipeng.library.animcheckbox.AnimCheckBox
        android:layout_gravity="center_horizontal"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/ins"
        ads:stroke_width="4dp"
        ads:stroke_color="@color/accentOrange"
        ads:circle_color="@color/lightOrange"
        android:layout_below="@+id/service"
        android:layout_alignLeft="@+id/service"
        android:layout_alignStart="@+id/service" />

    <com.github.lguipeng.library.animcheckbox.AnimCheckBox
        android:layout_gravity="center_horizontal"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/clean"
        ads:stroke_width="4dp"
        ads:stroke_color="@color/accentOrange"
        ads:circle_color="@color/lightOrange"
        android:layout_below="@+id/ins"
        android:layout_alignLeft="@+id/fuel"
        android:layout_alignStart="@+id/fuel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export"
        android:textSize="25sp"
        android:id="@+id/textView5"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/exp_imp_fuel"
        android:textSize="25sp"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/fuel"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/exp_imp_service"
        android:textSize="25sp"
        android:id="@+id/textView7"
        android:layout_alignBottom="@+id/service"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/exp_imp_insurance"
        android:textSize="25sp"
        android:id="@+id/textView8"
        android:layout_above="@+id/clean"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/exp_imp_cleaning"
        android:textSize="25sp"
        android:id="@+id/textView9"
        android:layout_alignBottom="@+id/clean"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exportBtn"
        android:paddingLeft="110dp"
        android:paddingRight="110dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        ads:fb_borderColor="@color/accentOrange"
        ads:fb_borderWidth="1dp"
        ads:fb_defaultColor="@color/navigationBarOrange"
        ads:fb_focusColor="@color/lightOrange"
        ads:fb_radius="3dp"
        ads:fb_text="@string/exp_imp_export"
        ads:fb_textColor="@color/black"
        android:layout_below="@+id/clean"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/importBtn"
        android:paddingLeft="110dp"
        android:paddingRight="110dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        ads:fb_borderColor="@color/accentOrange"
        ads:fb_borderWidth="1dp"
        ads:fb_defaultColor="@color/navigationBarOrange"
        ads:fb_focusColor="@color/lightOrange"
        ads:fb_radius="3dp"
        ads:fb_text="@string/exp_imp_import"
        ads:fb_textColor="@color/black"
        android:layout_below="@+id/exportBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_exp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
